# event_driven_pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  PAGINATION_GUIDE.md  README.md
.github/workflows/: pre-commit.yml
docker/: docker-compose.yaml
openspec/: project.md
openspec/changes/archive/2025-11-20-add-metabase-dashboard/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-20-add-metabase-dashboard/specs/dashboard/: spec.md
openspec/changes/archive/2025-11-20-test-end-to-end-setup/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-20-test-end-to-end-setup/specs/e2e-testing/: spec.md
openspec/changes/archive/2025-11-20-test-end-to-end-setup/specs/health-checks/: spec.md
openspec/specs/dashboard/: spec.md
openspec/specs/e2e-testing/: spec.md
openspec/specs/health-checks/: spec.md
scripts/: e2e_test.py  pyproject.toml
src/: .dockerignore  Dockerfile-api  Dockerfile-consumer  Dockerfile-producer
src/api/: pyproject.toml
src/api/alembic/: env.py
src/api/alembic/versions/: 840dc0f71a0e_initial_migration_with_all_tables_and_.py
src/api/api_app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
src/api/tests/: conftest.py  test_e2e_pipeline.py
src/consumer/: README.md  pyproject.toml
src/consumer/consumer_app/: config.py  message_consumer.py
src/producer/: pyproject.toml
src/producer/producer_app/: api_fetcher.py  config.py
