[project]
name = "consumer"
version = "0.1.0"
description = "Consumer service for event-driven pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pika>=1.3.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[tool.setuptools.packages.find]
where = ["."]  # Search for packages in the current directory
include = ["consumer_app*"]  # Include packages starting with 'consumer_app'
